--- a/frontendFiles/index.html
+++ b/frontendFiles/index.html
@@ -9,8 +9,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stay and Sail Boat Service Bhitarkanika</title>
-  <meta name="description"
-    content="Experience the beauty of Bhitarkanika National Park with our exclusive boat tours. Book your adventure today!" />
+  <!-- Description is now handled by React Helmet Async for better SEO per page -->
 </head>
 
 <body>
